--- a/src/main/res/values-ar/strings.xml
+++ b/src/main/res/values-ar/strings.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="appirator_rate_title">معدل %s</string>
-    <string name="appirator_message">إذا كنت تستمع باستخدام %s، فهل تمانع بأن تأخذ دقيقة من وقتك لتقيمه؟ لن يستغرق الأمر أكثر من دقيقة. شكرا لدعمك!</string>
-    <string name="appirator_button_rate">قيم %s</string>
-    <string name="appirator_button_rate_later">ذكرني لاحقا</string>
-    <string name="appirator_button_rate_cancel">لا شكرا</string>
+    <string name="appirater_rate_title">معدل %s</string>
+    <string name="appirater_message">إذا كنت تستمع باستخدام %s، فهل تمانع بأن تأخذ دقيقة من وقتك لتقيمه؟ لن يستغرق الأمر أكثر من دقيقة. شكرا لدعمك!</string>
+    <string name="appirater_button_rate">قيم %s</string>
+    <string name="appirater_button_rate_later">ذكرني لاحقا</string>
+    <string name="appirater_button_rate_cancel">لا شكرا</string>
 </resources>
