--- a/src/main/res/values-ca/strings.xml
+++ b/src/main/res/values-ca/strings.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="appirator_rate_title">Rate %s</string>
-    <string name="appirator_message">Si li agrada utilitzar %s, li importaria prendre’s un moment per a valorar-lo? No trigarà més d’un minut. Gràcies por la seva col·laboració!</string>
-    <string name="appirator_button_rate">Valorar %s</string>
-    <string name="appirator_button_rate_later">Recordar-m’ho més tard</string>
-    <string name="appirator_button_rate_cancel">No, gràcies</string>
+    <string name="appirater_rate_title">Rate %s</string>
+    <string name="appirater_message">Si li agrada utilitzar %s, li importaria prendre’s un moment per a valorar-lo? No trigarà més d’un minut. Gràcies por la seva col·laboració!</string>
+    <string name="appirater_button_rate">Valorar %s</string>
+    <string name="appirater_button_rate_later">Recordar-m’ho més tard</string>
+    <string name="appirater_button_rate_cancel">No, gràcies</string>
 </resources>
