--- a/src/main/res/values-cs/strings.xml
+++ b/src/main/res/values-cs/strings.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="appirator_rate_title">Tarifa %s</string>
-    <string name="appirator_message">Pokud se Vám aplikace %s líbí, mohli byste ji prosím ohodnotit v App Store? Zabere to jen chvilku. Díky za Vaši podporu!</string>
-    <string name="appirator_button_rate">Ohodnotit %s</string>
-    <string name="appirator_button_rate_later">Možná později</string>
-    <string name="appirator_button_rate_cancel">Ne, díky</string>
+    <string name="appirater_rate_title">Tarifa %s</string>
+    <string name="appirater_message">Pokud se Vám aplikace %s líbí, mohli byste ji prosím ohodnotit v App Store? Zabere to jen chvilku. Díky za Vaši podporu!</string>
+    <string name="appirater_button_rate">Ohodnotit %s</string>
+    <string name="appirater_button_rate_later">Možná později</string>
+    <string name="appirater_button_rate_cancel">Ne, díky</string>
 </resources>
