--- a/src/main/res/values-el/strings.xml
+++ b/src/main/res/values-el/strings.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="appirator_rate_title">τιμή %s</string>
-    <string name="appirator_message">Αν σου αρέσει το %s, θα μπορούσες να αφιερώσεις μια στιγμή για να το βαθμολογήσεις; Η διαδικασία είναι πολύ σύντομη. Ευχαριστούμε για τη στήριξη!</string>
-    <string name="appirator_button_rate">Βαθμολόγηση του %s</string>
-    <string name="appirator_button_rate_later">Υπενθύμιση αργότερα</string>
-    <string name="appirator_button_rate_cancel">Όχι, ευχαριστώ</string>
+    <string name="appirater_rate_title">τιμή %s</string>
+    <string name="appirater_message">Αν σου αρέσει το %s, θα μπορούσες να αφιερώσεις μια στιγμή για να το βαθμολογήσεις; Η διαδικασία είναι πολύ σύντομη. Ευχαριστούμε για τη στήριξη!</string>
+    <string name="appirater_button_rate">Βαθμολόγηση του %s</string>
+    <string name="appirater_button_rate_later">Υπενθύμιση αργότερα</string>
+    <string name="appirater_button_rate_cancel">Όχι, ευχαριστώ</string>
 </resources>
