--- a/src/main/res/values-es/strings.xml
+++ b/src/main/res/values-es/strings.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="appirator_rate_title">Tarifa %s</string>
-    <string name="appirator_message">Si le gusta utilizar %s, ¿le importaría valorarlo? No le llevará más de un minuto. ¡Gracias por su colaboración!</string>
-    <string name="appirator_button_rate">Valorar %s</string>
-    <string name="appirator_button_rate_later">Recordar más tarde</string>
-    <string name="appirator_button_rate_cancel">No, gracias</string>
+    <string name="appirater_rate_title">Tarifa %s</string>
+    <string name="appirater_message">Si le gusta utilizar %s, ¿le importaría valorarlo? No le llevará más de un minuto. ¡Gracias por su colaboración!</string>
+    <string name="appirater_button_rate">Valorar %s</string>
+    <string name="appirater_button_rate_later">Recordar más tarde</string>
+    <string name="appirater_button_rate_cancel">No, gracias</string>
 </resources>
