--- a/src/main/res/values-fi/strings.xml
+++ b/src/main/res/values-fi/strings.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="appirator_rate_title">Määrä %s</string>
-    <string name="appirator_message">Jos käytät mielelläsi %s, voisitko käyttää hetken ja arvostella sen? Se ei kestä minuuttia kauempaa. Kiitos tuestasi!</string>
-    <string name="appirator_button_rate">Arvioi %s</string>
-    <string name="appirator_button_rate_later">Muistuta minua myöhemmin</string>
-    <string name="appirator_button_rate_cancel">Ei kiitos</string>
+    <string name="appirater_rate_title">Määrä %s</string>
+    <string name="appirater_message">Jos käytät mielelläsi %s, voisitko käyttää hetken ja arvostella sen? Se ei kestä minuuttia kauempaa. Kiitos tuestasi!</string>
+    <string name="appirater_button_rate">Arvioi %s</string>
+    <string name="appirater_button_rate_later">Muistuta minua myöhemmin</string>
+    <string name="appirater_button_rate_cancel">Ei kiitos</string>
 </resources>
