--- a/src/main/res/values-fr/strings.xml
+++ b/src/main/res/values-fr/strings.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="appirator_rate_title">Taux %s</string>
-    <string name="appirator_message">Si vous aimez %s, voulez-vous prendre un moment pour l\'évaluer? Cela ne vous prendra pas plus d\'une minute. Merci de votre soutien!</string>
-    <string name="appirator_button_rate">Notez %s</string>
-    <string name="appirator_button_rate_later">Rappelez-moi plus tard</string>
-    <string name="appirator_button_rate_cancel">Non, Merci</string>
+    <string name="appirater_rate_title">Taux %s</string>
+    <string name="appirater_message">Si vous aimez %s, voulez-vous prendre un moment pour l\'évaluer? Cela ne vous prendra pas plus d\'une minute. Merci de votre soutien!</string>
+    <string name="appirater_button_rate">Notez %s</string>
+    <string name="appirater_button_rate_later">Rappelez-moi plus tard</string>
+    <string name="appirater_button_rate_cancel">Non, Merci</string>
 </resources>
