--- a/src/main/res/values-hu/strings.xml
+++ b/src/main/res/values-hu/strings.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="appirator_rate_title">Arány %s</string>
-    <string name="appirator_message">Ha tetszik a %s, ne felejtsd el értékelni az App Store-ban! Csak egy perc az egész. Köszönet a támogatásért!</string>
-    <string name="appirator_button_rate">%s értékelése</string>
-    <string name="appirator_button_rate_later">Emlékeztess később</string>
-    <string name="appirator_button_rate_cancel">Most inkább nem</string>
+    <string name="appirater_rate_title">Arány %s</string>
+    <string name="appirater_message">Ha tetszik a %s, ne felejtsd el értékelni az App Store-ban! Csak egy perc az egész. Köszönet a támogatásért!</string>
+    <string name="appirater_button_rate">%s értékelése</string>
+    <string name="appirater_button_rate_later">Emlékeztess később</string>
+    <string name="appirater_button_rate_cancel">Most inkább nem</string>
 </resources>
