--- a/src/main/res/values-in/strings.xml
+++ b/src/main/res/values-in/strings.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="appirator_rate_title">Laju %s</string>
-    <string name="appirator_message">Jika anda menyukai %s, maukah anda memberikan rating kepada aplikasi ini? Rating hanya memakan waktu kurang dari 1 menit. Terimakasih untuk dukungan anda!</string>
-    <string name="appirator_button_rate">Rating %s</string>
-    <string name="appirator_button_rate_later">Silakan ingatkan saya lagi</string>
-    <string name="appirator_button_rate_cancel">Tidak, terimakasih</string>
+    <string name="appirater_rate_title">Laju %s</string>
+    <string name="appirater_message">Jika anda menyukai %s, maukah anda memberikan rating kepada aplikasi ini? Rating hanya memakan waktu kurang dari 1 menit. Terimakasih untuk dukungan anda!</string>
+    <string name="appirater_button_rate">Rating %s</string>
+    <string name="appirater_button_rate_later">Silakan ingatkan saya lagi</string>
+    <string name="appirater_button_rate_cancel">Tidak, terimakasih</string>
 </resources>
