--- a/src/main/res/values-it/strings.xml
+++ b/src/main/res/values-it/strings.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="appirator_rate_title">Tasso %s</string>
-    <string name="appirator_message">Se trovi utile %s, perché non spendere qualche momento per dare una valutazione? Non richiederà più di un minuto. Grazie per il supporto!</string>
-    <string name="appirator_button_rate">Valuta %s</string>
-    <string name="appirator_button_rate_later">Ricordamelo più tardi</string>
-    <string name="appirator_button_rate_cancel">No, grazie</string>
+    <string name="appirater_rate_title">Tasso %s</string>
+    <string name="appirater_message">Se trovi utile %s, perché non spendere qualche momento per dare una valutazione? Non richiederà più di un minuto. Grazie per il supporto!</string>
+    <string name="appirater_button_rate">Valuta %s</string>
+    <string name="appirater_button_rate_later">Ricordamelo più tardi</string>
+    <string name="appirater_button_rate_cancel">No, grazie</string>
 </resources>
