--- a/src/main/res/values-ja/strings.xml
+++ b/src/main/res/values-ja/strings.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="appirator_rate_title">レート %s</string>
-    <string name="appirator_message">楽しんでいただけたならば簡単なご意見をお願いします。%sを評価しますか？</string>
-    <string name="appirator_button_rate">%sを評価する</string>
-    <string name="appirator_button_rate_later">後で見る</string>
-    <string name="appirator_button_rate_cancel">いいえ</string>
+    <string name="appirater_rate_title">レート %s</string>
+    <string name="appirater_message">楽しんでいただけたならば簡単なご意見をお願いします。%sを評価しますか？</string>
+    <string name="appirater_button_rate">%sを評価する</string>
+    <string name="appirater_button_rate_later">後で見る</string>
+    <string name="appirater_button_rate_cancel">いいえ</string>
 </resources>
