--- a/src/main/res/values-ms/strings.xml
+++ b/src/main/res/values-ms/strings.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="appirator_rate_title">Kadar %s</string>
-    <string name="appirator_message">Jika anda suka %s, bolehkah luangkan sedikit masa untuk beri penarafan? Tak sampai seminit pun. Terima kasih atas sokongan anda!</string>
-    <string name="appirator_button_rate">Tarafkan %s</string>
-    <string name="appirator_button_rate_later">Ingatkan saya lain kali</string>
-    <string name="appirator_button_rate_cancel">Terima kasih saja</string>
+    <string name="appirater_rate_title">Kadar %s</string>
+    <string name="appirater_message">Jika anda suka %s, bolehkah luangkan sedikit masa untuk beri penarafan? Tak sampai seminit pun. Terima kasih atas sokongan anda!</string>
+    <string name="appirater_button_rate">Tarafkan %s</string>
+    <string name="appirater_button_rate_later">Ingatkan saya lain kali</string>
+    <string name="appirater_button_rate_cancel">Terima kasih saja</string>
 </resources>
