--- a/src/main/res/values-nl/strings.xml
+++ b/src/main/res/values-nl/strings.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="appirator_rate_title">Rate %s</string>
-    <string name="appirator_message">Als het gebruik van %s je bevalt, zou je dan een momentje de tijd willen nemen om het te beoordelen? Het duurt nog geen minuut. Bedankt voor je steun!</string>
-    <string name="appirator_button_rate">%s beoordelen</string>
-    <string name="appirator_button_rate_later">Herinner me er later aan</string>
-    <string name="appirator_button_rate_cancel">Nee, bedankt</string>
+    <string name="appirater_rate_title">Rate %s</string>
+    <string name="appirater_message">Als het gebruik van %s je bevalt, zou je dan een momentje de tijd willen nemen om het te beoordelen? Het duurt nog geen minuut. Bedankt voor je steun!</string>
+    <string name="appirater_button_rate">%s beoordelen</string>
+    <string name="appirater_button_rate_later">Herinner me er later aan</string>
+    <string name="appirater_button_rate_cancel">Nee, bedankt</string>
 </resources>
