--- a/src/main/res/values-pl/strings.xml
+++ b/src/main/res/values-pl/strings.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="appirator_rate_title">Tarief %s</string>
-    <string name="appirator_message">Jeżeli podoba Ci się korzystanie z %s, może zechciałbyś poświęcić chwilę czasu, aby ocenić aplikację? Nie zajmie Ci to więcej niż minutę. Dziękujemy za pomoc!</string>
-    <string name="appirator_button_rate">Oceń %s</string>
-    <string name="appirator_button_rate_later">Przypomnij później</string>
-    <string name="appirator_button_rate_cancel">Nie, dziękuję</string>
+    <string name="appirater_rate_title">Tarief %s</string>
+    <string name="appirater_message">Jeżeli podoba Ci się korzystanie z %s, może zechciałbyś poświęcić chwilę czasu, aby ocenić aplikację? Nie zajmie Ci to więcej niż minutę. Dziękujemy za pomoc!</string>
+    <string name="appirater_button_rate">Oceń %s</string>
+    <string name="appirater_button_rate_later">Przypomnij później</string>
+    <string name="appirater_button_rate_cancel">Nie, dziękuję</string>
 </resources>
