--- a/src/main/res/values-pt/strings.xml
+++ b/src/main/res/values-pt/strings.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="appirator_rate_title">Taxa %s</string>
-    <string name="appirator_message">Se você gosta de usar o %s, que tal avaliá-lo? Não levará mais de um minuto. Agradecemos o seu apoio!</string>
-    <string name="appirator_button_rate">Avaliar o %s</string>
-    <string name="appirator_button_rate_later">Mais tarde</string>
-    <string name="appirator_button_rate_cancel">Não, obrigado</string>
+    <string name="appirater_rate_title">Taxa %s</string>
+    <string name="appirater_message">Se você gosta de usar o %s, que tal avaliá-lo? Não levará mais de um minuto. Agradecemos o seu apoio!</string>
+    <string name="appirater_button_rate">Avaliar o %s</string>
+    <string name="appirater_button_rate_later">Mais tarde</string>
+    <string name="appirater_button_rate_cancel">Não, obrigado</string>
 </resources>
