--- a/src/main/res/values-ru/strings.xml
+++ b/src/main/res/values-ru/strings.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="appirator_rate_title">ставка %s</string>
-    <string name="appirator_message">Если Вам понравилась программа %s, пожалуйста поставьте свою оценку. Это займет у Вас не более одной минуты.\n Спасибо за поддержку!</string>
-    <string name="appirator_button_rate">Оценить %s</string>
-    <string name="appirator_button_rate_later">Напомнить позже</string>
-    <string name="appirator_button_rate_cancel">Нет, спасибо</string>
+    <string name="appirater_rate_title">ставка %s</string>
+    <string name="appirater_message">Если Вам понравилась программа %s, пожалуйста поставьте свою оценку. Это займет у Вас не более одной минуты.\n Спасибо за поддержку!</string>
+    <string name="appirater_button_rate">Оценить %s</string>
+    <string name="appirater_button_rate_later">Напомнить позже</string>
+    <string name="appirater_button_rate_cancel">Нет, спасибо</string>
 </resources>
