--- a/src/main/res/values-th/strings.xml
+++ b/src/main/res/values-th/strings.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="appirator_rate_title">ประเมิน %s</string>
-    <string name="appirator_message">ถ้าคุณกำลังใช้ %s โปรดสละเวลาสักครู่ในการให้อันดับแก่เรา คุณจะเสียเวลาไม่เกินหนึ่งนาที ขอบคุณสำหรับการสนับสนุน!</string>
-    <string name="appirator_button_rate">ให้อันดับ %s</string>
-    <string name="appirator_button_rate_later">เตือนฉันภายหลัง</string>
-    <string name="appirator_button_rate_cancel">ไม่ ขอบคุณ</string>
+    <string name="appirater_rate_title">ประเมิน %s</string>
+    <string name="appirater_message">ถ้าคุณกำลังใช้ %s โปรดสละเวลาสักครู่ในการให้อันดับแก่เรา คุณจะเสียเวลาไม่เกินหนึ่งนาที ขอบคุณสำหรับการสนับสนุน!</string>
+    <string name="appirater_button_rate">ให้อันดับ %s</string>
+    <string name="appirater_button_rate_later">เตือนฉันภายหลัง</string>
+    <string name="appirater_button_rate_cancel">ไม่ ขอบคุณ</string>
 </resources>
