--- a/src/main/res/values-tr/strings.xml
+++ b/src/main/res/values-tr/strings.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="appirator_rate_title">Oran %s</string>
-    <string name="appirator_message">Eğer %s uygulamasını beğendiyseniz, oy verip bize destek olmak ister misiniz? Desteğiniz için teşekkürler!</string>
-    <string name="appirator_button_rate">Evet, %s oylamak istiyorum</string>
-    <string name="appirator_button_rate_later">Daha sonra hatırlat</string>
-    <string name="appirator_button_rate_cancel">Hayır, Teşekkürler</string>
+    <string name="appirater_rate_title">Oran %s</string>
+    <string name="appirater_message">Eğer %s uygulamasını beğendiyseniz, oy verip bize destek olmak ister misiniz? Desteğiniz için teşekkürler!</string>
+    <string name="appirater_button_rate">Evet, %s oylamak istiyorum</string>
+    <string name="appirater_button_rate_later">Daha sonra hatırlat</string>
+    <string name="appirater_button_rate_cancel">Hayır, Teşekkürler</string>
 </resources>
