--- a/src/main/res/values-vi/strings.xml
+++ b/src/main/res/values-vi/strings.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="appirator_rate_title">Tốc độ %s</string>
-    <string name="appirator_message">Cảm ơn bạn đã sử dụng ứng dụng %s trong thời gian qua, bạn có thể dành chút thời gian để đánh giá ứng dụng trong AppStore không?</string>
-    <string name="appirator_button_rate">Đánh giá %s</string>
-    <string name="appirator_button_rate_later">Hãy nhắc nhở tôi sau</string>
-    <string name="appirator_button_rate_cancel">Không, xin cảm ơn</string>
+    <string name="appirater_rate_title">Tốc độ %s</string>
+    <string name="appirater_message">Cảm ơn bạn đã sử dụng ứng dụng %s trong thời gian qua, bạn có thể dành chút thời gian để đánh giá ứng dụng trong AppStore không?</string>
+    <string name="appirater_button_rate">Đánh giá %s</string>
+    <string name="appirater_button_rate_later">Hãy nhắc nhở tôi sau</string>
+    <string name="appirater_button_rate_cancel">Không, xin cảm ơn</string>
 </resources>
