--- a/src/main/res/values-zh-rTW/strings.xml
+++ b/src/main/res/values-zh-rTW/strings.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="appirator_rate_title">率 %s</string>
-    <string name="appirator_message">如果你喜欢使用%s，你介意花一点时间给它评分吗？不会超过一分钟。感谢您的支持！</string>
-    <string name="appirator_button_rate">给%s评分</string>
-    <string name="appirator_button_rate_later">稍后提醒我</string>
-    <string name="appirator_button_rate_cancel">不，谢谢</string>
+    <string name="appirater_rate_title">率 %s</string>
+    <string name="appirater_message">如果你喜欢使用%s，你介意花一点时间给它评分吗？不会超过一分钟。感谢您的支持！</string>
+    <string name="appirater_button_rate">给%s评分</string>
+    <string name="appirater_button_rate_later">稍后提醒我</string>
+    <string name="appirater_button_rate_cancel">不，谢谢</string>
 </resources>
